sessions/parser/sessions_parser.go
// Code generated from ./ast/parser/sessions.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // sessions

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type sessionsParser struct {
	*antlr.BaseParser
}

var SessionsParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sessionsParserInit() {
	staticData := &SessionsParserStaticData
	staticData.LiteralNames = []string{
		"", "'import'", "'proc'", "'val'", "'type'", "'let'", "'as'", "'conc'",
		"'req'", "'acc'", "'rec'", "'current'", "'recursion'", "'role'", "'with'",
		"'select'", "'branch'", "'of'", "'if'", "'then'", "'else'", "'term'",
		"'io'", "'broker'", "'chan'", "'requester'", "'sync'", "'async'", "':'",
		"';'", "'.'", "','", "'<-'", "'('", "')'", "'['", "']'", "'{'", "'}'",
		"'||'", "'&&'", "", "", "", "", "'not'", "'='", "'out'", "'inp'", "'.close'",
		"", "", "'true'", "'false'", "", "'int'", "'float'", "'string'", "'bool'",
		"'record'", "'local'", "'!'", "'?'", "'or'", "'end'", "'global'", "'->'",
		"'context'",
	}
	staticData.SymbolicNames = []string{
		"", "IMPORT", "PROC", "VAL", "TYPE", "LET", "AS", "CONC", "REQ", "ACC",
		"REC", "CURRENT", "RECURSION", "ROLE", "WITH", "SELECT", "BRANCH", "OF",
		"IF", "THEN", "ELSE", "TERMINATE", "IO", "BROKER", "CHANNEL", "REQUESTER",
		"SYNC", "ASYNC", "COLON", "SEMICOLON", "DOT", "COMMA", "ARROW", "LPAR",
		"RPAR", "LSQ", "RSQ", "LBRA", "RBRA", "LOR", "LAND", "EQOP", "RELOP",
		"SUMOP", "MULOP", "NOT", "EQUALS", "OUT", "INP", "CLOSE", "FLOAT_LIT",
		"INT_LIT", "TRUE", "FALSE", "STRING_LIT", "INT", "FLOAT", "STRING",
		"BOOLEAN", "RECORD", "LOCAL", "SEND", "RECEIVE", "OR", "END", "GLOBAL",
		"PASS", "CONTEXT", "ID", "LABEL", "COMMENTS", "BLOCK_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"module", "imports", "path", "declaration", "declarationSugar", "name",
		"participant", "variableDef", "variable", "application", "abstraction",
		"concurrent", "acceptProc", "request", "recurse", "process", "blockProc",
		"sequenceProc", "prefix", "receive", "send", "out", "inp", "let", "closeBroker",
		"call", "ifThenElseProc", "selectProc", "branchProc", "labelExpression",
		"terminateProc", "logicalOr", "logicalAnd", "equalityExpr", "relationalExpr",
		"sumExpr", "multExpr", "unary", "term", "literal", "listExpr", "listSlice",
		"conditionalExpr", "record", "broker", "primaryTerm", "primaryList",
		"primaryRecord", "type", "primitiveType", "nameType", "ioType", "session",
		"configuration", "recordType", "brokerType", "sessionDef", "configurationDef",
		"projection", "localAbstraction", "labelType", "local", "sendLocal",
		"receiveLocal", "selectLocal", "branchLocal", "labelLocal", "end", "localContext",
		"globalDef", "global", "pass", "choice", "labelGlobal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// sessionsParserInit initializes any static state used to implement sessionsParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewsessionsParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SessionsParserInit() {
	staticData := &SessionsParserStaticData
	staticData.once.Do(sessionsParserInit)
}

// NewsessionsParser produces a new parser instance for the optional input antlr.TokenStream.
func NewsessionsParser(input antlr.TokenStream) *sessionsParser {
	SessionsParserInit()
	this := new(sessionsParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SessionsParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "sessions.g4"

	return this
}

// sessionsParser tokens.
const (
	sessionsParserEOF           = antlr.TokenEOF
	sessionsParserIMPORT        = 1
	sessionsParserPROC          = 2
	sessionsParserVAL           = 3
	sessionsParserTYPE          = 4
	sessionsParserLET           = 5
	sessionsParserAS            = 6
	sessionsParserCONC          = 7
	sessionsParserREQ           = 8
	sessionsParserACC           = 9
	sessionsParserREC           = 10
	sessionsParserCURRENT       = 11
	sessionsParserRECURSION     = 12
	sessionsParserROLE          = 13
	sessionsParserWITH          = 14
	sessionsParserSELECT        = 15
	sessionsParserBRANCH        = 16
	sessionsParserOF            = 17
	sessionsParserIF            = 18
	sessionsParserTHEN          = 19
	sessionsParserELSE          = 20
	sessionsParserTERMINATE     = 21
	sessionsParserIO            = 22
	sessionsParserBROKER        = 23
	sessionsParserCHANNEL       = 24
	sessionsParserREQUESTER     = 25
	sessionsParserSYNC          = 26
	sessionsParserASYNC         = 27
	sessionsParserCOLON         = 28
	sessionsParserSEMICOLON     = 29
	sessionsParserDOT           = 30
	sessionsParserCOMMA         = 31
	sessionsParserARROW         = 32
	sessionsParserLPAR          = 33
	sessionsParserRPAR          = 34
	sessionsParserLSQ           = 35
	sessionsParserRSQ           = 36
	sessionsParserLBRA          = 37
	sessionsParserRBRA          = 38
	sessionsParserLOR           = 39
	sessionsParserLAND          = 40
	sessionsParserEQOP          = 41
	sessionsParserRELOP         = 42
	sessionsParserSUMOP         = 43
	sessionsParserMULOP         = 44
	sessionsParserNOT           = 45
	sessionsParserEQUALS        = 46
	sessionsParserOUT           = 47
	sessionsParserINP           = 48
	sessionsParserCLOSE         = 49
	sessionsParserFLOAT_LIT     = 50
	sessionsParserINT_LIT       = 51
	sessionsParserTRUE          = 52
	sessionsParserFALSE         = 53
	sessionsParserSTRING_LIT    = 54
	sessionsParserINT           = 55
	sessionsParserFLOAT         = 56
	sessionsParserSTRING        = 57
	sessionsParserBOOLEAN       = 58
	sessionsParserRECORD        = 59
	sessionsParserLOCAL         = 60
	sessionsParserSEND          = 61
	sessionsParserRECEIVE       = 62
	sessionsParserOR            = 63
	sessionsParserEND           = 64
	sessionsParserGLOBAL        = 65
	sessionsParserPASS          = 66
	sessionsParserCONTEXT       = 67
	sessionsParserID            = 68
	sessionsParserLABEL         = 69
	sessionsParserCOMMENTS      = 70
	sessionsParserBLOCK_COMMENT = 71
	sessionsParserWS            = 72
)

// sessionsParser rules.
const (
	sessionsParserRULE_module           = 0
	sessionsParserRULE_imports          = 1
	sessionsParserRULE_path             = 2
	sessionsParserRULE_declaration      = 3
	sessionsParserRULE_declarationSugar = 4
	sessionsParserRULE_name             = 5
	sessionsParserRULE_participant      = 6
	sessionsParserRULE_variableDef      = 7
	sessionsParserRULE_variable         = 8
	sessionsParserRULE_application      = 9
	sessionsParserRULE_abstraction      = 10
	sessionsParserRULE_concurrent       = 11
	sessionsParserRULE_acceptProc       = 12
	sessionsParserRULE_request          = 13
	sessionsParserRULE_recurse          = 14
	sessionsParserRULE_process          = 15
	sessionsParserRULE_blockProc        = 16
	sessionsParserRULE_sequenceProc     = 17
	sessionsParserRULE_prefix           = 18
	sessionsParserRULE_receive          = 19
	sessionsParserRULE_send             = 20
	sessionsParserRULE_out              = 21
	sessionsParserRULE_inp              = 22
	sessionsParserRULE_let              = 23
	sessionsParserRULE_closeBroker      = 24
	sessionsParserRULE_call             = 25
	sessionsParserRULE_ifThenElseProc   = 26
	sessionsParserRULE_selectProc       = 27
	sessionsParserRULE_branchProc       = 28
	sessionsParserRULE_labelExpression  = 29
	sessionsParserRULE_terminateProc    = 30
	sessionsParserRULE_logicalOr        = 31
	sessionsParserRULE_logicalAnd       = 32
	sessionsParserRULE_equalityExpr     = 33
	sessionsParserRULE_relationalExpr   = 34
	sessionsParserRULE_sumExpr          = 35
	sessionsParserRULE_multExpr         = 36
	sessionsParserRULE_unary            = 37
	sessionsParserRULE_term             = 38
	sessionsParserRULE_literal          = 39
	sessionsParserRULE_listExpr         = 40
	sessionsParserRULE_listSlice        = 41
	sessionsParserRULE_conditionalExpr  = 42
	sessionsParserRULE_record           = 43
	sessionsParserRULE_broker           = 44
	sessionsParserRULE_primaryTerm      = 45
	sessionsParserRULE_primaryList      = 46
	sessionsParserRULE_primaryRecord    = 47
	sessionsParserRULE_type             = 48
	sessionsParserRULE_primitiveType    = 49
	sessionsParserRULE_nameType         = 50
	sessionsParserRULE_ioType           = 51
	sessionsParserRULE_session          = 52
	sessionsParserRULE_configuration    = 53
	sessionsParserRULE_recordType       = 54
	sessionsParserRULE_brokerType       = 55
	sessionsParserRULE_sessionDef       = 56
	sessionsParserRULE_configurationDef = 57
	sessionsParserRULE_projection       = 58
	sessionsParserRULE_localAbstraction = 59
	sessionsParserRULE_labelType        = 60
	sessionsParserRULE_local            = 61
	sessionsParserRULE_sendLocal        = 62
	sessionsParserRULE_receiveLocal     = 63
	sessionsParserRULE_selectLocal      = 64
	sessionsParserRULE_branchLocal      = 65
	sessionsParserRULE_labelLocal       = 66
	sessionsParserRULE_end              = 67
	sessionsParserRULE_localContext     = 68
	sessionsParserRULE_globalDef        = 69
	sessionsParserRULE_global           = 70
	sessionsParserRULE_pass             = 71
	sessionsParserRULE_choice           = 72
	sessionsParserRULE_labelGlobal      = 73
)

// IModuleContext is an interface to support dynamic dispatch.
type IModuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Imports() IImportsContext
	EOF() antlr.TerminalNode
	AllDeclaration() []IDeclarationContext
	Declaration(i int) IDeclarationContext

	// IsModuleContext differentiates from other interfaces.
	IsModuleContext()
}

type ModuleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModuleContext() *ModuleContext {
	var p = new(ModuleContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_module
	return p
}

func InitEmptyModuleContext(p *ModuleContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_module
}

func (*ModuleContext) IsModuleContext() {}

func NewModuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModuleContext {
	var p = new(ModuleContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sessionsParserRULE_module

	return p
}

func (s *ModuleContext) GetParser() antlr.Parser { return s.parser }

func (s *ModuleContext) Imports() IImportsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportsContext)
}

func (s *ModuleContext) EOF() antlr.TerminalNode {
	return s.GetToken(sessionsParserEOF, 0)
}

func (s *ModuleContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ModuleContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ModuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sessionsVisitor:
		return t.VisitModule(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sessionsParser) Module() (localctx IModuleContext) {
	localctx = NewModuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, sessionsParserRULE_module)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(148)
		p.Imports()
	}
	p.SetState(152)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&576460752311812124) != 0) || _la == sessionsParserID {
		{
			p.SetState(149)
			p.Declaration()
		}

		p.SetState(154)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(155)
		p.Match(sessionsParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportsContext is an interface to support dynamic dispatch.
type IImportsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIMPORT() []antlr.TerminalNode
	IMPORT(i int) antlr.TerminalNode
	AllPath() []IPathContext
	Path(i int) IPathContext
	AllSEMICOLON() []antlr.TerminalNode
	SEMICOLON(i int) antlr.TerminalNode

	// IsImportsContext differentiates from other interfaces.
	IsImportsContext()
}

type ImportsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportsContext() *ImportsContext {
	var p = new(ImportsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_imports
	return p
}

func InitEmptyImportsContext(p *ImportsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_imports
}

func (*ImportsContext) IsImportsContext() {}

func NewImportsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportsContext {
	var p = new(ImportsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sessionsParserRULE_imports

	return p
}

func (s *ImportsContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportsContext) AllIMPORT() []antlr.TerminalNode {
	return s.GetTokens(sessionsParserIMPORT)
}

func (s *ImportsContext) IMPORT(i int) antlr.TerminalNode {
	return s.GetToken(sessionsParserIMPORT, i)
}

func (s *ImportsContext) AllPath() []IPathContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPathContext); ok {
			len++
		}
	}

	tst := make([]IPathContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPathContext); ok {
			tst[i] = t.(IPathContext)
			i++
		}
	}

	return tst
}

func (s *ImportsContext) Path(i int) IPathContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPathContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPathContext)
}

func (s *ImportsContext) AllSEMICOLON() []antlr.TerminalNode {
	return s.GetTokens(sessionsParserSEMICOLON)
}

func (s *ImportsContext) SEMICOLON(i int) antlr.TerminalNode {
	return s.GetToken(sessionsParserSEMICOLON, i)
}

func (s *ImportsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sessionsVisitor:
		return t.VisitImports(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sessionsParser) Imports() (localctx IImportsContext) {
	localctx = NewImportsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, sessionsParserRULE_imports)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(164)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == sessionsParserIMPORT {
		{
			p.SetState(157)
			p.Match(sessionsParserIMPORT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(158)
			p.Path()
		}
		p.SetState(160)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == sessionsParserSEMICOLON {
			{
				p.SetState(159)
				p.Match(sessionsParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

		p.SetState(166)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPathContext is an interface to support dynamic dispatch.
type IPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode
	AllDOT() []antlr.TerminalNode
	DOT(i int) antlr.TerminalNode

	// IsPathContext differentiates from other interfaces.
	IsPathContext()
}

type PathContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPathContext() *PathContext {
	var p = new(PathContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_path
	return p
}

func InitEmptyPathContext(p *PathContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sessionsParserRULE_path
}

func (*PathContext) IsPathContext() {}

func NewPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PathContext {
	var p = new(PathContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sessionsParserRULE_path

	return p
}

func (s *PathContext) GetParser() antlr.Parser { return s.parser }

func (s *PathContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(sessionsParserID)
}

func (s *PathContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(sessionsParserID, i)
}

func (s *PathContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(sessionsParserDOT)
}

func (s *PathContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(sessionsParserDOT, i)
}

func (s *PathContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PathContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PathContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sessionsVisitor:
		return t.VisitPath(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sessionsParser) Path() (localctx IPathContext) {
	localctx = NewPathContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, sessionsParserRULE_path)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(167)
		p.Match(sessionsParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(172)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)
